Añadida ruta get de productos

--- a/hbs-backend/src/views/layouts/main.handlebars
+++ b/hbs-backend/src/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
         <a class="enlace" href="/">Home</a>
         <a href="/contactos">Contactos</a>
         <a href="/usuarios">Usuairos</a>
+        <a href="/productos">Productos</a>
     </nav>
     {{{body}}}
 </body>
